# Vaultwarden-Kube-Backup

./: .pre-commit-config.yaml  Dockerfile  README.MD  pyproject.toml  requirements.txt  vaultwarden-backup.py  vaultwarden_backup.py
.github/workflows/: ci.yaml
vaultwarden-kube-backup/: __main__.py
